kubernetes/manifests/homepage/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: config-source
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
              readOnly: true
            - name: config-source
              mountPath: /app/config/services.yaml
              subPath: services.yaml
              readOnly: true
            - name: config-source
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
              readOnly: true
            - name: config-source
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
              readOnly: true
            - name: config-source
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
              readOnly: true
            - name: config-source
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          emptyDir: {}
        - name: config-source
          configMap:
            name: homepage-config
