kubernetes/manifests/homepage/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
